[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-memory-quality"
version = "0.1.0"
description = "Memory health monitor for OpenClaw — diagnose, guard, and remediate your agent's memory"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "ladyiceberg", email = "ladyiceberg@users.noreply.github.com" },
]
keywords = [
    "openclaw",
    "mcp",
    "memory",
    "agent",
    "ai",
    "llm",
    "memory-health",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ladyiceberg/openclaw-memory-quality"
Repository = "https://github.com/ladyiceberg/openclaw-memory-quality"
"Bug Tracker" = "https://github.com/ladyiceberg/openclaw-memory-quality/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
openclaw-memhealth = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
